tests/katib/installs/katib-external-db/test_data/expected/apps_v1_deployment_katib-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: katib-controller
    app.kubernetes.io/component: katib
    app.kubernetes.io/instance: katib-controller
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: katib-controller
    app.kubernetes.io/part-of: kubeflow
  name: katib-controller
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: katib-controller
      app.kubernetes.io/component: katib
      app.kubernetes.io/instance: katib-controller
      app.kubernetes.io/managed-by: kfctl
      app.kubernetes.io/name: katib-controller
      app.kubernetes.io/part-of: kubeflow
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        sidecar.istio.io/inject: "false"
      labels:
        app: katib-controller
        app.kubernetes.io/component: katib
        app.kubernetes.io/instance: katib-controller
        app.kubernetes.io/managed-by: kfctl
        app.kubernetes.io/name: katib-controller
        app.kubernetes.io/part-of: kubeflow
    spec:
      containers:
      - args:
        - --webhook-port=8443
        command:
        - ./katib-controller
        env:
        - name: KATIB_CORE_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: gcr.io/kubeflow-images-public/katib/v1alpha3/katib-controller:v0.8.0
        imagePullPolicy: IfNotPresent
        name: katib-controller
        ports:
        - containerPort: 8443
          name: webhook
          protocol: TCP
        - containerPort: 8080
          name: metrics
          protocol: TCP
        volumeMounts:
        - mountPath: /tmp/cert
          name: cert
          readOnly: true
      serviceAccountName: katib-controller
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: katib-controller
