tests/katib/installs/katib-external-db/test_data/expected/apps_v1_deployment_katib-db-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: katib
    app.kubernetes.io/component: katib
    app.kubernetes.io/name: katib-controller
    component: db-manager
  name: katib-db-manager
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: katib
      app.kubernetes.io/component: katib
      app.kubernetes.io/name: katib-controller
      component: db-manager
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: katib
        app.kubernetes.io/component: katib
        app.kubernetes.io/name: katib-controller
        component: db-manager
      name: katib-db-manager
    spec:
      containers:
      - command:
        - ./katib-db-manager
        env:
        - name: DB_NAME
          value: mysql
        - name: DB_USER
          valueFrom:
            secretKeyRef:
              key: DB_USER
              name: katib-mysql-secrets-kmcg6hfkfg
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: DB_PASSWORD
              name: katib-mysql-secrets-kmcg6hfkfg
        - name: KATIB_MYSQL_DB_DATABASE
          valueFrom:
            secretKeyRef:
              key: KATIB_MYSQL_DB_DATABASE
              name: katib-mysql-secrets-kmcg6hfkfg
        - name: KATIB_MYSQL_DB_HOST
          valueFrom:
            secretKeyRef:
              key: KATIB_MYSQL_DB_HOST
              name: katib-mysql-secrets-kmcg6hfkfg
        - name: KATIB_MYSQL_DB_PORT
          valueFrom:
            secretKeyRef:
              key: KATIB_MYSQL_DB_PORT
              name: katib-mysql-secrets-kmcg6hfkfg
        image: uhub.service.ucloud.cn/a4x-kubeflow/kubeflowkatib/katib-db-manager:v1beta1-a96ff59
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:6789
          failureThreshold: 5
          initialDelaySeconds: 10
          periodSeconds: 60
        name: katib-db-manager
        ports:
        - containerPort: 6789
          name: api
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:6789
          initialDelaySeconds: 5
